# RobotEngine

./: Robotics.sln  Robotics_ard.ino
Robotics/: CMakeLists.txt  Robotics.vcxproj
Robotics/Backend/: BaseReader.cpp  BaseReader.h  CMakeLists.txt  Constants.hpp  InputReader.cpp  InputReader.h  OutputReader.cpp  OutputReader.h  RobotEngine.cpp  RobotEngine.hpp  SimReader.cpp  SimReader.h
Robotics/GUI/: App.cpp  App.h  MainFrame.cpp  MainFrame.h
